tests/unary_ops/valid/bitwise.amu
main :: () -> s32 {
    return ~12;
}
