tests/unary_ops/invalid/nested_missing_const.amu
main() : s32 {
    return !~;
}